--- a/Practicals/Assignment-1/Q2.md
+++ b/Practicals/Assignment-1/Q2.md
@@ -1,4 +1,4 @@
-|command| function|usage|
+|Command| Function|Usage|
 |-------|---------|-----|
 |man| UNIX help facility| man -k topic or man command|
 |ls| directory listing
@@ -20,7 +20,7 @@ pg |displays file page at a time
 diff| shows differences in files |diff file1 file2
 file |displays type of file |file filename
 chmod |changes file mode |chmod u+x file |
-> < |directed output or input| more file1.txt > file2.txt|
+"> <" |directed output or input| more file1.txt > file2.txt|
 grep| search for string in file| grep string filenames
 emacs |editor program |emacs filename
 vi| another editor |vi filename
